# lil_os

./: Cargo.toml  README.md  build.sh
kernel/: Cargo.toml  Makefile
kernel/.cargo/: config.toml
kernel/src/: lib.rs  main.rs
kernel/src/arch/x86_64/: gdt.rs  idt.rs  interrupts.rs  mod.rs  paging.rs
kernel/src/drivers/serial/: mod.rs
kernel/src/interrupts/: keyboard.rs  mod.rs  timer.rs
kernel/src/memory/: allocator.rs  frame_allocator.rs  mod.rs
kernel/src/os_core/: messages.rs  mod.rs
kernel/src/os_core/memory/: allocator.rs  mod.rs
kernel/src/synchronization/: spinlock.rs
kernel/src/tests/: idt.rs  mod.rs  qemu.rs
kernel/tests/: idt_breakpoint_handler.rs  idt_divide_by_zero_handler.rs  idt_stack_overflow.rs
src/: lib.rs  main.rs
src/arch/x86_64/: address.rs  mod.rs  privilege.rs
src/arch/x86_64/gdt/: descriptor.rs  mod.rs  table.rs  tss.rs
src/arch/x86_64/idt/: entry.rs  handlers.rs  mod.rs  table.rs
src/arch/x86_64/interrupts/: handlers.rs  ibm_pc_at_8259.rs  mod.rs  pic8259.rs
src/arch/x86_64/registers/: mod.rs  segments.rs
src/drivers/: mod.rs
src/drivers/input/: keyboard.rs
src/drivers/screen/text/: mod.rs  vga.rs
src/drivers/serial/: mod.rs
src/interrupts/: keyboard.rs
src/os_core/: mod.rs  spinlock.rs
src/os_core/memory/: volatile.rs
src/tests/: idt.rs  mod.rs
tests/: basic_boot.rs  idt_breakpoint_handler.rs  idt_divide_by_zero_handler.rs  idt_stack_overflow.rs
x86_64/: Cargo.toml
x86_64/src/: address.rs  lib.rs
x86_64/src/gdt/: mod.rs  table.rs  tss.rs
x86_64/src/idt/: entry.rs  handlers.rs  mod.rs  table.rs
x86_64/src/interrupts/: handlers.rs  ibm_pc_at_8259.rs  mod.rs
x86_64/src/memory/: frame_allocator.rs  mapper.rs  mod.rs  translator.rs
x86_64/src/memory/address/: mod.rs  physical_memory_address.rs  virtual_memory_address.rs
x86_64/src/memory/paging/: frame.rs  frame_size.rs  mod.rs  page.rs  (+2 more)
x86_64/src/paging/: mod.rs  page_table.rs  page_table_entry.rs  translator.rs
x86_64/src/registers/: control.rs  mod.rs  segments.rs
(+12 files in other folders)
