[package]
name = "lil_os"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Disable stack unwinding
[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[unstable]
build-std = ["core", "compiler_builtins"]

[dependencies]
bootloader = "0.9.8"
volatile = "0.2.6"
lazy_static = { version = "1", features = ["spin_no_std"] }
spin = "0.9.4"
