[package]
name = "lil_os"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Disable stack unwinding
[profile.dev]
panic = "abort"

# We need to set this in order to execute the tests correctly when we run `cargo test`. This is an
# open bug https://github.com/rust-lang/cargo/issues/7359
[profile.test]
panic = "unwind"

[profile.release]
panic = "abort"

# This configuration is required to shutdown QEMU after tests run:
# https://os.phil-opp.com/testing/#exiting-qemu
# QEMU supports a special isa-debug-exit device, which provides an easy way to exit QEMU from the
# guest system. To enable it, we need to pass a -device argument to QEMU.
[package.metadata.bootimage]
test-args = [
  "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
  "-serial", "stdio",
  "-display", "none"
]
test-success-exit-code = 33
test-timeout = 300          # (in seconds) https://os.phil-opp.com/testing/#timeouts

[unstable]
build-std = ["core", "compiler_builtins"]

[dependencies]
x86_64 = "0.14" # TODO: Replace! someday...
uart_16550 = "0.2"
bootloader = "0.9.8" # TODO: Replace! someday...
bit_field = "0.10"
pc-keyboard = "0.6" # TODO: Replace! someday...
lazy_static = { version = "1", features = ["spin_no_std"] }

[[test]]
name = "idt_stack_overflow"
harness = false

[[test]]
name = "idt_breakpoint_handler"
harness = false

[[test]]
name = "idt_divide_by_zero_handler"
harness = false

